Fix horizontal scrollbar on special pages
Solution: fix .hidden mixin, per Alexander E. Patrakov's report

Bug: T131575

--- a/resources/variables.less
+++ b/resources/variables.less
@@ -63,6 +63,7 @@
 .hidden() {
 	position: absolute;
 	top: -9999px;
+	left: 0px;
 }
 
 // Icons - hides labels, but keep them accessible for screen-readers
